fixed some more spacing and card image size.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,8 +43,8 @@ p {
 }
 
 .card-img-top {
-    height: 60%;
-    width: 60%;
+    height: 90%;
+    width: 90%;
     margin: 0 auto;
 }
 
@@ -93,7 +93,7 @@ p {
 }
 
 .card {
-	background-color: transparent;
+	background-color: rgba(182, 230, 255, .5);
 	color: white;
 }
 
